syntax = "proto3";
package msg;
import "core.types.proto";

// GroupsCreate
// @Function
// @Return: Bool
message GroupsCreate {
    repeated InputUser Users = 1;
    string Title = 2;
    int64 RandomID = 3;
}

// GroupsAddUser
// @Function
// @Return: Bool
message GroupsAddUser {
    int64 GroupID = 1 [jstype = JS_STRING];
    InputUser User = 2;
    int32 ForwardLimit = 3;
}

// GroupsEditTitle
// @Function
// @Return: Bool
message GroupsEditTitle {
    int64 GroupID = 1 [jstype = JS_STRING];
    string Title = 2;
}

// GroupsDeleteUser
// @Function
// @Return: Bool
message GroupsDeleteUser {
    int64 GroupID = 1 [jstype = JS_STRING];
    InputUser User = 2;
}

// GroupsGetFull
// @Function
// @Return: GroupFull
message GroupsGetFull {
    int64 GroupID = 1 [jstype = JS_STRING];
}

// GroupsToggleAdmins
// @Function
// @Return: Bool
message GroupsToggleAdmins {
    int64 GroupID = 1 [jstype = JS_STRING];
    bool AdminEnabled = 2;
}

// GroupsToggleAdminOnly
// @Function
// @Return: Bool
message GroupsToggleAdminOnly {
    int64 GroupID = 1 [jstype = JS_STRING];
    bool AdminOnly = 2;
}

// GroupsUpdateAdmin
// @Function
// @Return: Bool
message GroupsUpdateAdmin {
    int64 GroupID = 1 [jstype = JS_STRING];
    InputUser User = 2;
    bool Admin = 3;
}

// GroupsUploadPhoto
// @Function
// @Return: Bool / GroupPhoto
message GroupsUploadPhoto {
    int64 GroupID = 1 [jstype = JS_STRING];
    InputFile File = 2;
    bool ReturnObject = 3;
}

// GroupsRemovePhoto
// @Function
// @Return: Bool
message GroupsRemovePhoto {
    int64 GroupID = 1 [jstype = JS_STRING];
    int64 PhotoID = 2 [jstype = JS_STRING];
}

// GroupsUpdatePhoto
// @Function
// @Return: Bool
message GroupsUpdatePhoto {
    int64 PhotoID = 1 [jstype = JS_STRING];
    int64 GroupID = 2 [jstype = JS_STRING];
}

// GroupsGetHistoryStats
// @Function
// @Return: GroupsHistoryStats
message GroupsGetReadHistoryStats {
    int64 GroupID = 1 [jstype = JS_STRING];
}

// GroupsHistoryStats
message GroupsHistoryStats {
    repeated ReadHistoryStat Stats = 1;
    repeated User Users = 2;
    bool Empty = 3;
}

// ReadHistoryStat
message ReadHistoryStat {
    int64 UserID = 1 [jstype = JS_STRING];
    int64 MessageID = 2;
}
