/*
    Creation Time: 2018 - Sep - 25
    Created by:  (hamidrezakk)
    Maintainers:
       1.  HamidrezaKK (hamidrezakks@gmail.com)
    Auditor: HamidrezaKK
    Copyright Ronak Software Group 2018
*/

// OutOfSync: 23742374,
// UpdateGroups: 1825234234,
// UpdateNewMessageDrop: 342692518374,
// UpdateUsers: 1825893475,
/* tslint:disable-next-line */
export const C_MSG = {
    AccountAuthorization: 275571966,
    AccountAuthorizations: 1092320500,
    AccountChangePhone: 4285969474,
    AccountCheckUsername: 1501406413,
    AccountGetAuthorizations: 2112646192,
    AccountGetNotifySettings: 477008681,
    AccountGetPrivacy: 1897044856,
    AccountPrivacyRules: 3802018092,
    AccountRegisterDevice: 946059841,
    AccountRemovePhoto: 3728692172,
    AccountResetAuthorization: 1045069116,
    AccountSetLang: 2015777242,
    AccountSetNotifySettings: 2016882075,
    AccountSetPrivacy: 1599585002,
    AccountUnregisterDevice: 3981251588,
    AccountUpdatePhoto: 406174115,
    AccountUpdateProfile: 3725499887,
    AccountUpdateStatus: 666864933,
    AccountUpdateUsername: 1477164344,
    AccountUploadPhoto: 1222469957,
    Ack: 447331921,
    AppUpdate: 1100207036,
    AuthAuthorization: 1140037965,
    AuthBotAuthorization: 3304560814,
    AuthBotRegister: 1579606687,
    AuthCheckPhone: 4134648516,
    AuthCheckedPhone: 2236203131,
    AuthDestroyKey: 3673422656,
    AuthLogin: 2587620888,
    AuthLoginByToken: 2851553023,
    AuthLogout: 992431648,
    AuthRecall: 1172029049,
    AuthRecalled: 3249025459,
    AuthRegister: 2228369460,
    AuthResendCode: 2682713491,
    AuthSendCode: 3984043365,
    AuthSentCode: 2375498471,
    Bool: 4122188204,
    Bot: 961692401,
    Button: 1034594571,
    ButtonBuy: 2992465437,
    ButtonCallback: 4007711268,
    ButtonRequestGeoLocation: 323515934,
    ButtonRequestPhone: 630958494,
    ButtonSwitchInline: 3842667878,
    ButtonUrl: 2309530052,
    ButtonUrlAuth: 2344836100,
    ClientFile: 155127968,
    ClientFileStatus: 2731095358,
    ClientPendingMessage: 2164891929,
    ClientSearchResult: 2957647709,
    ClientSendMessageMedia: 1095038539,
    ClientUpdateMessagesDeleted: 3060926862,
    ClientUpdatePendingMessageDelivery: 3828722061,
    ClientUpdateSynced: 4244270269,
    ContactUser: 460099170,
    ContactsDelete: 1750426880,
    ContactsGet: 1412732665,
    ContactsImport: 3473528730,
    ContactsImported: 2157298354,
    ContactsMany: 3883395672,
    DBMediaInfo: 2652925823,
    DHGroup: 2751503049,
    Dialog: 1120787796,
    Document: 555739168,
    DocumentAttribute: 4146719643,
    DocumentAttributeAudio: 309707708,
    DocumentAttributeFile: 2227452062,
    DocumentAttributePhoto: 515862833,
    DocumentAttributeVideo: 1993289477,
    DraftMessage: 869564229,
    EchoWithDelay: 2861516000,
    Error: 2619118453,
    File: 749574446,
    FileGet: 4282510672,
    FileLocation: 2432133155,
    FileSavePart: 3766876582,
    Group: 2885774273,
    GroupFull: 205850814,
    GroupParticipant: 4072279665,
    GroupPhoto: 3998516135,
    GroupsAddUser: 394654713,
    GroupsCreate: 1271969037,
    GroupsDeleteUser: 3172322223,
    GroupsEditTitle: 2582813461,
    GroupsGetFull: 2986704909,
    GroupsRemovePhoto: 176771682,
    GroupsToggleAdmins: 1581076909,
    GroupsUpdateAdmin: 1345991011,
    GroupsUpdatePhoto: 3431184397,
    GroupsUploadPhoto: 2624284907,
    InitAuthCompleted: 627708982,
    InitBindUser: 1933549113,
    InitCompleteAuth: 1583178320,
    InitCompleteAuthInternal: 2360982492,
    InitConnect: 4150793517,
    InitConnectTest: 3188015450,
    InitResponse: 4130340247,
    InitTestAuth: 2762878006,
    InitUserBound: 128391141,
    InputButtonUrlAuth: 2325608894,
    InputDocument: 4081048424,
    InputFile: 3882180383,
    InputFileLocation: 354669666,
    InputMediaContact: 1534117184,
    InputMediaDocument: 2258657627,
    InputMediaGeoLocation: 185664060,
    InputMediaPhoto: 2201579839,
    InputMediaUploadedDocument: 870692909,
    InputMediaUploadedPhoto: 849930963,
    InputPeer: 3374092470,
    InputUser: 3865689926,
    KeyboardButtonEnvelope: 2639543624,
    KeyboardButtonRow: 2222403758,
    Label: 3479601132,
    LabelItems: 4271841358,
    LabelsAddToMessage: 180144503,
    LabelsCreate: 2138857068,
    LabelsDelete: 3401105936,
    LabelsEdit: 2790466877,
    LabelsGet: 2575409921,
    LabelsListItems: 2351763198,
    LabelsMany: 1423713603,
    LabelsRemoveFromMessage: 4195197703,
    MediaContact: 3735320833,
    MediaDocument: 2281620705,
    MediaGeoLocation: 2625326500,
    MediaPhoto: 71894788,
    MediaSize: 3543753456,
    MediaWebPage: 148034084,
    MessageActionClearHistory: 1270465696,
    MessageActionContactRegistered: 2399156016,
    MessageActionGroupAddUser: 1949386261,
    MessageActionGroupCreated: 2241024808,
    MessageActionGroupDeleteUser: 1213452128,
    MessageActionGroupPhotoChanged: 188265964,
    MessageActionGroupTitleChanged: 2418464749,
    MessageActionScreenShotTaken: 2637201461,
    MessageContainer: 1972016308,
    MessageEntity: 3479443932,
    MessageEnvelope: 535232465,
    MessagesBroadcast: 142289348,
    MessagesClearDraft: 2164204563,
    MessagesClearHistory: 1981246180,
    MessagesDelete: 3487616910,
    MessagesDialogs: 3252610224,
    MessagesEdit: 2492658432,
    MessagesForward: 2662884753,
    MessagesGet: 2151382317,
    MessagesGetDialog: 1050840034,
    MessagesGetDialogs: 1429532372,
    MessagesGetHistory: 3396939832,
    MessagesGetPinnedDialogs: 1963188912,
    MessagesMany: 1713238910,
    MessagesReadContents: 1781251275,
    MessagesReadHistory: 1300826534,
    MessagesReorderPinnedDialogs: 1409872986,
    MessagesSaveDraft: 921840607,
    MessagesSend: 3000244183,
    MessagesSendMedia: 25498545,
    MessagesSendScreenShotNotification: 3682116055,
    MessagesSent: 2942502835,
    MessagesSetTyping: 1540214486,
    MessagesToggleDialogPin: 1352871220,
    MusicsAdd: 1108415956,
    MusicsFollow: 3932949167,
    MusicsGet: 1110460483,
    MusicsRemove: 3940045807,
    MusicsSetStatus: 4026186002,
    MusicsUnFollow: 327524575,
    OutOfSync: 23742374,
    Peer: 47470215,
    PeerMediaInfo: 1816749655,
    PeerNotifySettings: 3475030132,
    PhoneContact: 2672574672,
    PrivacyRule: 3954700912,
    ProtoEncryptedPayload: 2668405547,
    ProtoMessage: 2179260159,
    RSAPublicKey: 1046601890,
    ReplyInlineMarkup: 2436413989,
    ReplyKeyboardForceReply: 258469686,
    ReplyKeyboardMarkup: 3207405102,
    StartBot: 3294108684,
    SystemDHGroups: 2890748083,
    SystemGetAppUpdate: 450761036,
    SystemGetDHGroups: 1786665018,
    SystemGetInfo: 1486296237,
    SystemGetPublicKeys: 1191522796,
    SystemGetSalts: 1705203315,
    SystemGetServerTime: 1321179349,
    SystemInfo: 2754948760,
    SystemPublicKeys: 2745130223,
    SystemSalts: 871116906,
    SystemServerTime: 2854614486,
    TestRequest: 475847033,
    TestRequestWithString: 3760062575,
    TestResponse: 1999996896,
    TestResponseWithString: 556112423,
    UpdateAccountPrivacy: 629173761,
    UpdateAuthorizationReset: 2359297647,
    UpdateContainer: 661712615,
    UpdateDialogPinned: 231538299,
    UpdateDialogPinnedReorder: 1567423539,
    UpdateDifference: 1742546619,
    UpdateDraftMessage: 3453026195,
    UpdateDraftMessageCleared: 2011635602,
    UpdateEnvelope: 2373884514,
    UpdateGetDifference: 556775761,
    UpdateGetState: 1437250230,
    UpdateGroupAdmins: 694155405,
    UpdateGroupParticipantAdd: 1623827837,
    UpdateGroupParticipantAdmin: 1813022164,
    UpdateGroupParticipantDeleted: 2489941844,
    UpdateGroupPhoto: 367193154,
    UpdateGroups: 1825234234,
    UpdateLabelDeleted: 3702192307,
    UpdateLabelItemsAdded: 2216022057,
    UpdateLabelItemsRemoved: 830226827,
    UpdateLabelSet: 2353687359,
    UpdateMessageEdited: 1825079988,
    UpdateMessageID: 2139063022,
    UpdateMessagesDeleted: 670568714,
    UpdateNewMessage: 3426925183,
    UpdateNewMessageDrop: 342692518374,
    UpdateNotifySettings: 3187524885,
    UpdateReadHistoryInbox: 1529128378,
    UpdateReadHistoryOutbox: 510866108,
    UpdateReadMessagesContents: 2991403048,
    UpdateState: 1837585836,
    UpdateTooLong: 1531755547,
    UpdateUserPhoto: 302028082,
    UpdateUserStatus: 2696747995,
    UpdateUserTyping: 178254060,
    UpdateUsername: 4290110589,
    UpdateUsers: 1825893475,
    User: 765557111,
    UserMessage: 1677556362,
    UserPhoto: 1881347437,
    UsersGet: 1039301579,
    UsersGetFull: 3343342086,
    UsersMany: 801733941,
};

export const C_ERR = {
    ErrCodeAccess: "E07",
    ErrCodeAlreadyExists: "E08",
    ErrCodeBusy: "E09",
    ErrCodeIncomplete: "E05",
    ErrCodeInternal: "E00",
    ErrCodeInvalid: "E01",
    ErrCodeOutOfRange: "E10",
    ErrCodePartiallyApplied: "E11",
    ErrCodeTimeout: "E06",
    ErrCodeTooFew: "E04",
    ErrCodeTooMany: "E03",
    ErrCodeUnavailable: "E02",
};

// Error Items
export const C_ERR_ITEM = {
    ErrItemAccessHash: "ACCESS_HASH",
    ErrItemActiveConnection: "ACTIVE_CONN",
    ErrItemApi: "API",
    ErrItemAppUpdate: "APP_UPDATE",
    ErrItemAuth: "AUTH",
    ErrItemAuthID: "AUTH_ID",
    ErrItemBindUser: "BIND_USER",
    ErrItemBio: "BIO",
    ErrItemChatText: "CHAT_TEXT",
    ErrItemCounter: "COUNTER",
    ErrItemDeleteCreator: "DELETE_CREATOR",
    ErrItemDeviceModel: "DEVICE_MODEL",
    ErrItemDeviceToken: "DEVICE_TOKEN",
    ErrItemDhKey: "DH_KEY",
    ErrItemDocument: "DOCUMENT",
    ErrItemEncryption: "ENCRYPTION",
    ErrItemFilePartID: "FILE_PART_ID",
    ErrItemFilePartSize: "FILE_PART_SIZE",
    ErrItemFileParts: "FILE_PARTS",
    ErrItemGroup: "GROUP",
    ErrItemGroupID: "GROUP_ID",
    ErrItemGroupMember: "GROUP_MEMBER",
    ErrItemGroupTitle: "GROUP_TITLE",
    ErrItemInput: "INPUT",
    ErrItemInputFile: "INPUT_FILE",
    ErrItemJobWorker: "JOB_WORKER",
    ErrItemLabel: "LABEL",
    ErrItemLastAdmin: "LAST_ADMIN",
    ErrItemMedia: "MEDIA",
    ErrItemMessage: "MESSAGE",
    ErrItemMessageID: "MESSAGE_ID",
    ErrItemNotFound: "not found",
    ErrItemPeer: "PEER",
    ErrItemPeerType: "PEER_TYPE",
    ErrItemPhone: "PHONE",
    ErrItemPhoneCode: "PHONE_CODE",
    ErrItemPhotoID: "PHOTO_ID",
    ErrItemPinnedDialogs: "PINNED_DIALOGS",
    ErrItemPq: "PQ",
    ErrItemProto: "PROTO",
    ErrItemRandomID: "RANDOM_ID",
    ErrItemRequest: "REQUEST",
    ErrItemRetractTime: "RETRACT_TIME",
    ErrItemRsaKey: "RSA_KEY",
    ErrItemSalt: "SALT",
    ErrItemServer: "SERVER",
    ErrItemSignIn: "SIGN_IN",
    ErrItemTimeout: "timeout",
    ErrItemToken: "TOKEN",
    ErrItemUserID: "USER_ID",
    ErrItemUsername: "USERNAME",
    ErrItemUsers: "USERS",
};

export const C_MSG_NAME = {
    25498545: "MessagesSendMedia",
    47470215: "Peer",
    71894788: "MediaPhoto",
    128391141: "InitUserBound",
    142289348: "MessagesBroadcast",
    148034084: "MediaWebPage",
    155127968: "ClientFile",
    176771682: "GroupsRemovePhoto",
    178254060: "UpdateUserTyping",
    180144503: "LabelsAddToMessage",
    185664060: "InputMediaGeoLocation",
    188265964: "MessageActionGroupPhotoChanged",
    205850814: "GroupFull",
    231538299: "UpdateDialogPinned",
    258469686: "ReplyKeyboardForceReply",
    275571966: "AccountAuthorization",
    302028082: "UpdateUserPhoto",
    309707708: "DocumentAttributeAudio",
    323515934: "ButtonRequestGeoLocation",
    327524575: "MusicsUnFollow",
    354669666: "InputFileLocation",
    367193154: "UpdateGroupPhoto",
    394654713: "GroupsAddUser",
    406174115: "AccountUpdatePhoto",
    447331921: "Ack",
    450761036: "SystemGetAppUpdate",
    460099170: "ContactUser",
    475847033: "TestRequest",
    477008681: "AccountGetNotifySettings",
    510866108: "UpdateReadHistoryOutbox",
    515862833: "DocumentAttributePhoto",
    535232465: "MessageEnvelope",
    555739168: "Document",
    556112423: "TestResponseWithString",
    556775761: "UpdateGetDifference",
    627708982: "InitAuthCompleted",
    629173761: "UpdateAccountPrivacy",
    630958494: "ButtonRequestPhone",
    661712615: "UpdateContainer",
    666864933: "AccountUpdateStatus",
    670568714: "UpdateMessagesDeleted",
    694155405: "UpdateGroupAdmins",
    749574446: "File",
    765557111: "User",
    801733941: "UsersMany",
    830226827: "UpdateLabelItemsRemoved",
    849930963: "InputMediaUploadedPhoto",
    869564229: "DraftMessage",
    870692909: "InputMediaUploadedDocument",
    871116906: "SystemSalts",
    921840607: "MessagesSaveDraft",
    946059841: "AccountRegisterDevice",
    961692401: "Bot",
    992431648: "AuthLogout",
    1034594571: "Button",
    1039301579: "UsersGet",
    1045069116: "AccountResetAuthorization",
    1046601890: "RSAPublicKey",
    1050840034: "MessagesGetDialog",
    1092320500: "AccountAuthorizations",
    1095038539: "ClientSendMessageMedia",
    1100207036: "AppUpdate",
    1108415956: "MusicsAdd",
    1110460483: "MusicsGet",
    1120787796: "Dialog",
    1140037965: "AuthAuthorization",
    1172029049: "AuthRecall",
    1191522796: "SystemGetPublicKeys",
    1213452128: "MessageActionGroupDeleteUser",
    1222469957: "AccountUploadPhoto",
    1270465696: "MessageActionClearHistory",
    1271969037: "GroupsCreate",
    1300826534: "MessagesReadHistory",
    1321179349: "SystemGetServerTime",
    1345991011: "GroupsUpdateAdmin",
    1352871220: "MessagesToggleDialogPin",
    1409872986: "MessagesReorderPinnedDialogs",
    1412732665: "ContactsGet",
    1423713603: "LabelsMany",
    1429532372: "MessagesGetDialogs",
    1437250230: "UpdateGetState",
    1477164344: "AccountUpdateUsername",
    1486296237: "SystemGetInfo",
    1501406413: "AccountCheckUsername",
    1529128378: "UpdateReadHistoryInbox",
    1531755547: "UpdateTooLong",
    1534117184: "InputMediaContact",
    1540214486: "MessagesSetTyping",
    1567423539: "UpdateDialogPinnedReorder",
    1579606687: "AuthBotRegister",
    1581076909: "GroupsToggleAdmins",
    1583178320: "InitCompleteAuth",
    1599585002: "AccountSetPrivacy",
    1623827837: "UpdateGroupParticipantAdd",
    1677556362: "UserMessage",
    1705203315: "SystemGetSalts",
    1713238910: "MessagesMany",
    1742546619: "UpdateDifference",
    1750426880: "ContactsDelete",
    1781251275: "MessagesReadContents",
    1786665018: "SystemGetDHGroups",
    1813022164: "UpdateGroupParticipantAdmin",
    1816749655: "PeerMediaInfo",
    1825079988: "UpdateMessageEdited",
    1837585836: "UpdateState",
    1881347437: "UserPhoto",
    1897044856: "AccountGetPrivacy",
    1933549113: "InitBindUser",
    1949386261: "MessageActionGroupAddUser",
    1963188912: "MessagesGetPinnedDialogs",
    1972016308: "MessageContainer",
    1981246180: "MessagesClearHistory",
    1993289477: "DocumentAttributeVideo",
    1999996896: "TestResponse",
    2011635602: "UpdateDraftMessageCleared",
    2015777242: "AccountSetLang",
    2016882075: "AccountSetNotifySettings",
    2112646192: "AccountGetAuthorizations",
    2138857068: "LabelsCreate",
    2139063022: "UpdateMessageID",
    2151382317: "MessagesGet",
    2157298354: "ContactsImported",
    2164204563: "MessagesClearDraft",
    2164891929: "ClientPendingMessage",
    2179260159: "ProtoMessage",
    2201579839: "InputMediaPhoto",
    2216022057: "UpdateLabelItemsAdded",
    2222403758: "KeyboardButtonRow",
    2227452062: "DocumentAttributeFile",
    2228369460: "AuthRegister",
    2236203131: "AuthCheckedPhone",
    2241024808: "MessageActionGroupCreated",
    2258657627: "InputMediaDocument",
    2281620705: "MediaDocument",
    2309530052: "ButtonUrl",
    2325608894: "InputButtonUrlAuth",
    2344836100: "ButtonUrlAuth",
    2351763198: "LabelsListItems",
    2353687359: "UpdateLabelSet",
    2359297647: "UpdateAuthorizationReset",
    2360982492: "InitCompleteAuthInternal",
    2373884514: "UpdateEnvelope",
    2375498471: "AuthSentCode",
    2399156016: "MessageActionContactRegistered",
    2418464749: "MessageActionGroupTitleChanged",
    2432133155: "FileLocation",
    2436413989: "ReplyInlineMarkup",
    2489941844: "UpdateGroupParticipantDeleted",
    2492658432: "MessagesEdit",
    2575409921: "LabelsGet",
    2582813461: "GroupsEditTitle",
    2587620888: "AuthLogin",
    2619118453: "Error",
    2624284907: "GroupsUploadPhoto",
    2625326500: "MediaGeoLocation",
    2637201461: "MessageActionScreenShotTaken",
    2639543624: "KeyboardButtonEnvelope",
    2652925823: "DBMediaInfo",
    2662884753: "MessagesForward",
    2668405547: "ProtoEncryptedPayload",
    2672574672: "PhoneContact",
    2682713491: "AuthResendCode",
    2696747995: "UpdateUserStatus",
    2731095358: "ClientFileStatus",
    2745130223: "SystemPublicKeys",
    2751503049: "DHGroup",
    2754948760: "SystemInfo",
    2762878006: "InitTestAuth",
    2790466877: "LabelsEdit",
    2851553023: "AuthLoginByToken",
    2854614486: "SystemServerTime",
    2861516000: "EchoWithDelay",
    2885774273: "Group",
    2890748083: "SystemDHGroups",
    2942502835: "MessagesSent",
    2957647709: "ClientSearchResult",
    2986704909: "GroupsGetFull",
    2991403048: "UpdateReadMessagesContents",
    2992465437: "ButtonBuy",
    3000244183: "MessagesSend",
    3060926862: "ClientUpdateMessagesDeleted",
    3172322223: "GroupsDeleteUser",
    3187524885: "UpdateNotifySettings",
    3188015450: "InitConnectTest",
    3207405102: "ReplyKeyboardMarkup",
    3249025459: "AuthRecalled",
    3252610224: "MessagesDialogs",
    3294108684: "StartBot",
    3304560814: "AuthBotAuthorization",
    3343342086: "UsersGetFull",
    3374092470: "InputPeer",
    3396939832: "MessagesGetHistory",
    3401105936: "LabelsDelete",
    3426925183: "UpdateNewMessage",
    3431184397: "GroupsUpdatePhoto",
    3453026195: "UpdateDraftMessage",
    3473528730: "ContactsImport",
    3475030132: "PeerNotifySettings",
    3479443932: "MessageEntity",
    3479601132: "Label",
    3487616910: "MessagesDelete",
    3543753456: "MediaSize",
    3673422656: "AuthDestroyKey",
    3682116055: "MessagesSendScreenShotNotification",
    3702192307: "UpdateLabelDeleted",
    3725499887: "AccountUpdateProfile",
    3728692172: "AccountRemovePhoto",
    3735320833: "MediaContact",
    3760062575: "TestRequestWithString",
    3766876582: "FileSavePart",
    3802018092: "AccountPrivacyRules",
    3828722061: "ClientUpdatePendingMessageDelivery",
    3842667878: "ButtonSwitchInline",
    3865689926: "InputUser",
    3882180383: "InputFile",
    3883395672: "ContactsMany",
    3932949167: "MusicsFollow",
    3940045807: "MusicsRemove",
    3954700912: "PrivacyRule",
    3981251588: "AccountUnregisterDevice",
    3984043365: "AuthSendCode",
    3998516135: "GroupPhoto",
    4007711268: "ButtonCallback",
    4026186002: "MusicsSetStatus",
    4072279665: "GroupParticipant",
    4081048424: "InputDocument",
    4122188204: "Bool",
    4130340247: "InitResponse",
    4134648516: "AuthCheckPhone",
    4146719643: "DocumentAttribute",
    4150793517: "InitConnect",
    4195197703: "LabelsRemoveFromMessage",
    4244270269: "ClientUpdateSynced",
    4271841358: "LabelItems",
    4282510672: "FileGet",
    4285969474: "AccountChangePhone",
    4290110589: "UpdateUsername",
};
